# airflow_k8

./: .gitattributes  .gitignore  Makefile  README.md
dags/: generate_dags.py  pipelines.generated.yaml
dags/common/: kpo.py
docs/: PLAN.md
etl/: .dockerignore  Dockerfile  pyproject.toml
etl/src/etl/: __init__.py  cli.py
etl/src/etl/framework/: __init__.py  catalog.py  context.py  discovery.py  manifest.py  pipeline.py  predicate.py  runner.py  scaffold.py  step.py  storage.py
etl/src/etl/pipelines/costs/: pipeline.py  steps.py
etl/src/etl/pipelines/earthquakes/: pipeline.py  steps.py
etl/tests/: test_costs_pipeline.py  test_earthquakes.py  test_framework.py  test_predicate.py
infra/dremio/: deployment.yaml  namespace.yaml  service.yaml
infra/helm/: airflow-values.yaml  minio-credentials.yaml  namespace.yaml  serving-db-credentials.yaml
infra/kind/: kind-cluster.yaml
infra/minio/: create-buckets-job.yaml  deployment.yaml  namespace.yaml  secret.yaml  service.yaml
infra/pulumi/: .gitignore  Pulumi.dev.yaml  Pulumi.yaml  __main__.py  requirements.txt
infra/registry/: connect-registry.sh  setup-registry.sh
infra/superset/: Dockerfile  deployment.yaml  namespace.yaml  service.yaml  serving-postgres.yaml  setup_superset.py
infra/superset/assets/: metadata.yaml
infra/superset/assets/charts/: Earthquake_events_by_country_1.yaml
infra/superset/assets/databases/: serving.yaml
infra/superset/assets/datasets/serving/: earthquake_events.yaml
infra/verify/: etl-smoke-job.yaml
