[project]
name = "etl"
version = "0.1.0"
description = "Polars + Delta Lake ETL framework (medallion, late-arriving-data aware)"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.30",
    "deltalake>=1.5,<1.6",  # 1.5.x is the newest with a Windows wheel (1.6.1 dropped win_amd64)
    "pyarrow>=16",
    "pyyaml>=6.0",
    "typer>=0.12",
    "httpx>=0.27",  # HTTP source for API-based extracts (e.g. USGS earthquakes)
    "reverse_geocoder>=1.5.1",  # offline lat/lon -> country/city (no API), for enrichment
    "tzdata",  # IANA tz db for zoneinfo (Windows + slim containers lack it) -> tz-aware timestamps
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
etl = "etl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
